--- a/app/views/products/_products_grid.html.erb
+++ b/app/views/products/_products_grid.html.erb
@@ -39,7 +39,7 @@
     product.delegation_ended_at.strftime('%Y-%m-%d') if product.delegation_ended_at
   end
 
-  unless local_assigns[:readonly] == true
+  unless !can?(:manage_customer_service_info, Product) && !can?(:manage_asset_management_info, Product)
     g.column html: {class: 'project-actions'} do |product|
       [
         link_to(fa_icon("pencil"), edit_product_path(product), class: 'btn btn-white btn-xs', data: {toggle: 'tooltip'}, title: t('buttons.edit')),
